[package]
name = "cached-asset-proxy"
version = "1.0.3"
authors = ["abhijit-paul <abhijit.paul9900@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*"}
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
r2d2_redis = "0.14.0"

warp = "0.3.2"
reqwest = { version = "0.11.9", features = ["json", "gzip"] }

env_logger = "0.8.0"
log = "0.4.1"

config = "0.9.3"
dotenv = "0.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"

zip = "0.5.3"
tree_magic = "0.2.1"

rusoto_core = "0.47.0"
rusoto_s3  = "0.47.0"

infer = "0.5.0"

[dependencies.bytes]
version = "1.0.1"

[dev-dependencies]
httpmock = "0.6.6"
md5 = "0.7.0"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
